[metadata]
name = jhl-wallet
url = https://github.com/JericoinProject/jhl-wallet
description = Jericoin wallet
long_description = file: README.md
author = Marek Marusin
author_email = marusin.marek@gmail.com
version = 1.0.0
keywords =
    jericoin
    evm
    poa
    wallet
    cryptocurrencies


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm

install_requires =
    Click
    web3
    eth-account
    eth-keys
    PyYAML
    mnemonic


[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    jhl-wallet=jhl_wallet.cli.jhl_wallet_cli:jhl_wallet_cli
